--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         function closeSidebar(){
             const element = document.getElementById('sidebar');
             element.style.width = '0';
-            element.style.left = '-50%';
+            element.style.left = '-290px';
         }
     </script>
 </body>
